--- a/app.json
+++ b/app.json
@@ -1,21 +1,19 @@
 {
   "expo": {
-    "name": "text-recognition-mobile",
-    "slug": "text-recognition-mobile",
+    "name": "Fast Correction",
+    "slug": "fast-correction-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#536DFE"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
