--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
@@ -14,6 +11,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
     "expo-font": "~8.3.0",
