--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@react-navigation/native": "^5.8.5",
     "@react-navigation/stack": "^5.12.2",
     "axios": "^0.21.0",
-    "expo": "~39.0.2",
+    "expo": "^39.0.4",
     "expo-camera": "~9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
